<resources>
    <string name="app_name">Yu-gi-oh! Ultra Basic Helper</string>
    <string name="set_list_text">Set List</string>
    <string name="card_list_text">Card List</string>
    <string name="image_text">Image</string>
    <string name="save_fav">Save as Favourite</string>
    <string name="del">Delete</string>
    <string name="del_all">Delete All Favourites</string>
    <string name="no_fav">No favourites saved</string>
    <string name="wel">Welcome</string>
    <string name="c_list">Card List</string>
    <string name="f_list">Favourite List</string>
    <string name="y_helper">Ultra Basic Helper</string>
    <string name="note_message">This App is getting the card info from http://yugiohprices.com</string>
    <string name="mast3">Master Rule 3</string>
    <string name="mast5">Master Rule 5</string>
    <string name="reset_all">Reset All</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="ini_atk_def">+0</string>
    <string name="ini_counter">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="reset">RESET</string>
    <string name="submit">SUBMIT</string>
</resources>