<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zoneColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/counter_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="2dp"
        app:layout_constraintBottom_toTopOf="@id/spellC_zone">

        <ImageView
            android:id="@+id/co1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/generic_counter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        
        <TextView
            android:id="@+id/counter_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/co1"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="3"
            android:text="@string/ini_counter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spellC_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toBottomOf="@id/counter_zone"
        app:layout_constraintBottom_toTopOf="@id/predC_zone">

        <ImageView
            android:id="@+id/co2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/spell_counter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/spellC_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/co2"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="3"
            android:text="@string/ini_counter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/predC_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toBottomOf="@id/spellC_zone"
        app:layout_constraintBottom_toTopOf="@id/dragC_zone">

        <ImageView
            android:id="@+id/co3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/predator_counter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/predC_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/co3"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="3"
            android:text="@string/ini_counter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dragC_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toBottomOf="@id/predC_zone"
        app:layout_constraintBottom_toTopOf="@id/atk_zone">

        <ImageView
            android:id="@+id/co4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/dragonic_counter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dragC_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/co4"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="3"
            android:text="@string/ini_counter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/atk_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toBottomOf="@id/dragC_zone"
        app:layout_constraintBottom_toTopOf="@id/def_zone">

        <TextView
            android:text="@string/atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="2dp"/>

        <TextView
            android:id="@+id/atk_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="2dp"
            android:textAlignment="textEnd"
            android:text="@string/ini_atk_def"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/def_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toBottomOf="@id/atk_zone"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:text="@string/def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="2dp"/>

        <TextView
            android:id="@+id/def_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="2dp"
            android:textAlignment="textEnd"
            android:text="@string/ini_atk_def"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>